# CardInfo_Recognize

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/aswlinume/cardinforecognize/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/aswlinume/idcardrecognize/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/aswlinume/cardinforecognize/: AutoTextureView.java  CameraActivity.java  CameraXActivity.java  CardRecognizeUtils.java  Constant.java  MainActivity.java
app/src/main/java/com/aswlinume/idcardrecognize/: AutoTextureView.java  CameraActivity.java  Constant.java  IDCardRecognizeUtils.java  MainActivity.java
app/src/main/res/layout/: activity_camera.xml  activity_camera_x_activity.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/aswlinume/cardinforecognize/: ExampleUnitTest.java
app/src/test/java/com/aswlinume/idcardrecognize/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
